--- a/css/index.css
+++ b/css/index.css
@@ -1,17 +1,67 @@
+.root {
+  --very-dark-grayish-blue: hsl(217, 19%, 35%);
+  --desaturated-dark-blue: hsl(214, 17%, 51%);
+  --grayish-blue: hsl(212, 23%, 69%);
+  --light-grayish-blue: hsl(210, 46%, 95%);
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-size: 13px;
+  font-family: "Manrope", sans-serif;
+  font-weight: 300;
 }
 
 html, body {
-  height: 100%;
   width: 100%;
+  height: 100%;
 }
 
 .root {
+  background-color: var(--light-grayish-blue);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 100%;
   width: 100%;
-  background-color: red;
 }
 
+.card {
+  display: grid;
+  grid-template-columns: 40% 60%;
+  grid-template-areas: "left right";
+  height: 35%;
+  width: 50%;
+}
+
+.card .left {
+  grid-area: left;
+  height: 100%;
+  width: 100%;
+}
+
+.card .left .img {
+  height: 100%;
+  width: 100%;
+}
+
+.card .right {
+  background-color: #ffffff;
+  grid-area: right;
+  padding: 5%;
+  height: 100%;
+  width: 100%;
+} 
+
+.card .right .title {
+  color: var(--very-dark-grayish-blue);
+  margin-bottom: 5%;
+  font-size: 19px;
+  font-weight: 700;
+}
+
+.card .right .text {
+  color: var(--desaturated-dark-blue);
+}
