Estruturando o layout do cartão

--- a/assets/scss/layout/_content.scss
+++ b/assets/scss/layout/_content.scss
@@ -1,5 +1,7 @@
 @import "../base/variables";
 
 .content {
-  background-color: $very-dark-grayish-blue;
+  background-color: $light-grayish-blue;
+  height: 100%;
+  width: 100%;
 }
