--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -1,6 +1,7 @@
-body,
-html {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+body {
+  font-family: "Manrope", sans-serif;
+  font-size: 13px;
+  font-weight: 500;
+  height: 100%;
+  width: 100%;
 }
