--- a/assets/scss/base/_variables.scss
+++ b/assets/scss/base/_variables.scss
@@ -1,3 +1,5 @@
+// Cores do site
 $very-dark-grayish-blue: hsl(217, 19%, 35%);
 $desaturated-dark_blue: hsl(214, 17%, 51%);
 $grayish-blue: hsl(212, 23%, 69%);
+$light-grayish-blue: hsl(210, 46%, 95%);
